--- a/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.fr.xlf
+++ b/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.fr.xlf
@@ -97,8 +97,7 @@
         </trans-unit>
         <trans-unit id="Resx/spd_msgXofYUnicodeChars" translate="yes" xml:space="preserve">
           <source>{0} significant Unicode Characters</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">{0} de {1} de caractères Unicode</target>
-          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
+          <target state="translated">{0} caractères Unicode</target>
           </trans-unit>
         <trans-unit id="Resx/spd_text_ReadMoreAbout" translate="yes" xml:space="preserve">
           <source>Read more about</source>
@@ -204,7 +203,8 @@
         <trans-unit id="Resx/fnt_label_typeFace" translate="yes" xml:space="preserve">
           <source>Typeface:</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">_Typeface :</target>
-          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note></trans-unit>
+          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
+          </trans-unit>
         <trans-unit id="Resx/fnt_theQuickBrownFox" translate="yes" xml:space="preserve">
           <source>The quick brown fox jumps over the lazy dog</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Rapide, le renard brun saute sur le chien paresseux</target>
@@ -212,7 +212,8 @@
         <trans-unit id="Resx/fnt_labelSize" translate="yes" xml:space="preserve">
           <source>Size:</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">_Size :</target>
-          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note></trans-unit>
+          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
+          </trans-unit>
         <trans-unit id="Resx/fnt_labelPreview" translate="yes" xml:space="preserve">
           <source>Preview:</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Aperçu :</target>
@@ -220,7 +221,8 @@
         <trans-unit id="Resx/fnt_labelFontFamilies" translate="yes" xml:space="preserve">
           <source>Font family:</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Famille de _Font :</target>
-          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note></trans-unit>
+          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
+          </trans-unit>
         <trans-unit id="Resx/termDefaults" translate="yes" xml:space="preserve">
           <source>Defaults</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Valeurs par défaut</target>
@@ -236,7 +238,8 @@
         <trans-unit id="Resx/msgFormatError" translate="yes" xml:space="preserve">
           <source>Invalid VisualCrypt format - Cannot decrypt this.</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Valide le format de VisualCrypt 2 - Impossible de décrypter ce !</target>
-          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note></trans-unit>
+          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
+          </trans-unit>
         <trans-unit id="Resx/msgInvalidFilename" translate="yes" xml:space="preserve">
           <source>Invalid Filename.</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Nom de fichier non valide.</target>
@@ -392,9 +395,8 @@
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Affichage</target>
         </trans-unit>
         <trans-unit id="Resx/miVCSettings" translate="yes" xml:space="preserve">
-          <source>Settings...</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">Paramètres...</target>
-        </trans-unit>
+          <source>Cryptography Settings...</source>
+          <target state="translated">Paramètres de chiffrement...</target></trans-unit>
         <trans-unit id="Resx/miVCSetPassword" translate="yes" xml:space="preserve">
           <source>Set Password...</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Définir le mot de passe...</target>
