--- a/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.it.xlf
+++ b/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.it.xlf
@@ -52,8 +52,8 @@
           <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
           </trans-unit>
         <trans-unit id="Resx/uriSpecUrl" translate="yes" xml:space="preserve">
-          <source>https://visualcrypt.com</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">https://visualcrypt.com</target>
+          <source>https://visualcrypt.com/post/visualcrypt-2-encryption-standard-specification</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">https://visualcrypt.com</target><note from="MultilingualUpdate" priority="2" annotates="source">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
         </trans-unit>
         <trans-unit id="Resx/msgDiscardChanges" translate="yes" xml:space="preserve">
           <source>Discard Changes?</source>
@@ -297,16 +297,16 @@
           <target state="needs-review-translation" state-qualifier="mt-suggestion">VisualCrypt 2 (AES 256 Bit, BCrypt - multipla)</target>
         </trans-unit>
         <trans-unit id="Resx/uriSourceUrl" translate="yes" xml:space="preserve">
-          <source>https://visualcrypt.com</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">https://visualcrypt.com</target>
+          <source>https://github.com/VisualCrypt/VisualCrypt</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">https://visualcrypt.com</target><note from="MultilingualUpdate" priority="2" annotates="source">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
         </trans-unit>
         <trans-unit id="Resx/uriPWSpecUrl" translate="yes" xml:space="preserve">
-          <source>https://visualcrypt.com</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">https://visualcrypt.com</target>
+          <source>https://visualcrypt.com/post/password-quality</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">https://visualcrypt.com</target><note from="MultilingualUpdate" priority="2" annotates="source">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
         </trans-unit>
         <trans-unit id="Resx/uriHelpUrl" translate="yes" xml:space="preserve">
-          <source>https://visualcrypt.com</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">https://visualcrypt.com</target>
+          <source>https://visualcrypt.com/category/faq</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">https://visualcrypt.com</target><note from="MultilingualUpdate" priority="2" annotates="source">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
         </trans-unit>
         <trans-unit id="Resx/termSetPassword" translate="yes" xml:space="preserve">
           <source>Set Password</source>
