--- a/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.qps-ploc.xlf
+++ b/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.qps-ploc.xlf
@@ -51,8 +51,8 @@
           <target state="new">Hello World!</target>
         </trans-unit>
         <trans-unit id="Resx/uriSpecUrl" translate="yes" xml:space="preserve">
-          <source>https://visualcrypt.com</source>
-          <target state="new">https://visualcrypt.com</target>
+          <source>https://visualcrypt.com/post/visualcrypt-2-encryption-standard-specification</source>
+          <target state="new">https://visualcrypt.com/post/visualcrypt-2-encryption-standard-specification</target>
         </trans-unit>
         <trans-unit id="Resx/msgDiscardChanges" translate="yes" xml:space="preserve">
           <source>Discard Changes?</source>
@@ -291,16 +291,16 @@
           <target state="new">VisualCrypt 2 (AES 256 Bit, BCrypt - Multi)</target>
         </trans-unit>
         <trans-unit id="Resx/uriSourceUrl" translate="yes" xml:space="preserve">
-          <source>https://visualcrypt.com</source>
-          <target state="new">https://visualcrypt.com</target>
+          <source>https://github.com/VisualCrypt/VisualCrypt</source>
+          <target state="new">https://github.com/VisualCrypt/VisualCrypt</target>
         </trans-unit>
         <trans-unit id="Resx/uriPWSpecUrl" translate="yes" xml:space="preserve">
-          <source>https://visualcrypt.com</source>
-          <target state="new">https://visualcrypt.com</target>
+          <source>https://visualcrypt.com/post/password-quality</source>
+          <target state="new">https://visualcrypt.com/post/password-quality</target>
         </trans-unit>
         <trans-unit id="Resx/uriHelpUrl" translate="yes" xml:space="preserve">
-          <source>https://visualcrypt.com</source>
-          <target state="new">https://visualcrypt.com</target>
+          <source>https://visualcrypt.com/category/faq</source>
+          <target state="new">https://visualcrypt.com/category/faq</target>
         </trans-unit>
         <trans-unit id="Resx/termSetPassword" translate="yes" xml:space="preserve">
           <source>Set Password</source>
