--- a/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.resx
+++ b/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.resx
@@ -325,16 +325,16 @@
     <value>Set Password</value>
   </data>
   <data name="uriHelpUrl" xml:space="preserve">
-    <value>https://visualcrypt.com</value>
+    <value>https://visualcrypt.com/category/faq</value>
   </data>
   <data name="uriPWSpecUrl" xml:space="preserve">
-    <value>https://visualcrypt.com</value>
+    <value>https://visualcrypt.com/post/password-quality</value>
   </data>
   <data name="uriSourceUrl" xml:space="preserve">
-    <value>https://visualcrypt.com</value>
+    <value>https://github.com/VisualCrypt/VisualCrypt</value>
   </data>
   <data name="uriSpecUrl" xml:space="preserve">
-    <value>https://visualcrypt.com</value>
+    <value>https://visualcrypt.com/post/visualcrypt-2-encryption-standard-specification</value>
   </data>
   <data name="msgDiscardChanges" xml:space="preserve">
     <value>Discard Changes?</value>
