--- a/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.fr.resx
+++ b/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.fr.resx
@@ -152,20 +152,16 @@
     <value>Calcul du Mac...</value>
   </data>
   <data name="uriSpecUrl" xml:space="preserve">
-    <value>https://visualcrypt.com</value>
-    <comment></comment>
+    <value>https://visualcrypt.com/post/visualcrypt-2-encryption-standard-specification</value>
   </data>
   <data name="uriSourceUrl" xml:space="preserve">
-    <value>https://visualcrypt.com</value>
-    <comment></comment>
+    <value>https://github.com/VisualCrypt/VisualCrypt</value>
   </data>
   <data name="uriPWSpecUrl" xml:space="preserve">
-    <value>https://visualcrypt.com</value>
-    <comment></comment>
+    <value>https://visualcrypt.com/post/password-quality</value>
   </data>
   <data name="uriHelpUrl" xml:space="preserve">
-    <value>https://visualcrypt.com</value>
-    <comment></comment>
+    <value>https://visualcrypt.com/category/faq</value>
   </data>
   <data name="termSetPassword" xml:space="preserve">
     <value>Définir le mot de passe</value>
